[project]
name = "wearable-display"
version = "0.1.0"
description = "Camera streaming utilities for the WearableDisplay prototype."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "google-genai>=0.5.2",
    "mediapipe>=0.10.14",
    "opencv-python>=4.9.0",
    "ultralytics>=8.2.77",
    "uvicorn[standard]>=0.27.1",
]

[tool.setuptools]
py-modules = ["camera_connector", "VideoStream"]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
